--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "co.gladminds.bajajcvl"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 5
-        versionName "1.0.3"
+        versionCode 6
+        versionName "1.0.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -54,6 +54,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
 
     compile 'com.google.firebase:firebase-database:11.8.0'
+
+//    compile 'com.rmtheis:tess-two:5.4.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
